[package]
name = "nix-fhs"
version = "0.1.0"
edition = "2024"
description = "CLI for managing FHS environments on nixOS"
license = "GPL-3.0-only"
repository = "https://github.com/mkg20001/nix-fhs"

[[bin]]
name = "fhs"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
dirs = "5"
serde_json = "1"
anyhow = "1"

[dev-dependencies]
tempfile = "3"
